Closed Bug 1991666 Opened 10 months ago Closed 10 months ago

Intermittent SUMMARY: AddressSanitizer: 462187 byte(s) leaked in 517 allocation(s).

Categories

(NSS :: Libraries, defect, P5)

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: intermittent-bug-filer, Assigned: jschanck)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Bob, could you take a look?

Flags: needinfo?(rrelyea)

That patch has some new invocations of dbtool in tests, but doesn't look like it introduced the memory leak.

Flags: needinfo?(rrelyea)
Assignee: nobody → jschanck
Status: NEW → ASSIGNED

Pushed by jschanck@mozilla.com:
https://hg.mozilla.org/projects/nss/rev/56755612c63f
dbtool: close databases before shutdown. r=nss-reviewers,nkulatova

Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: