Bug 1991666 - dbtool: close databases before shutdown. r=nss-reviewers,nkulatova

Differential Revision: https://phabricator.services.mozilla.com/D266925

--HG--
extra : moz-landing-system : lando